--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,12 @@ title:               Encyclopedia of the Dog
 tagline:             'An annotated digital edition of <i>Between Dog and Wolf</i> by Sasha Sokolov'
 description:         'An annotated digital edition of Between Dog and Wolf by Sasha Sokolov'
 url:                 'http://minicomp.github.io'
-baseurl:             '/dogopedia-dev'
+baseurl:             '/dogopedia-v1'
 
 # About/contact
 author:
-  name:              Alex Gil
-  url:               https://twitter.com/elotroalex
-  email:             colibri.alex@gmail.com
+  name:              Cameron Boucher, Adrianna Morsey, Rafiun Haque, Arlowe Willingham
+  email:             digitalscholarship@brynmawr.edu
 
 # Color scheme. Options: red, orange, magenta, cyan, blue, brown
 color-scheme: dog
